# imgex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgex.pro
doc/dev/: TODO  classes.md
src/: CMakeLists.txt  common.hh  decor.cc  decor.hh  image.cc  image.hh  imgex.pro  main.cc  qbox.hh  session.cc  session.hh  transform.cc  transform.hh  xwin.cc  xwin.hh
