cmake_minimum_required(VERSION 3.10)
project(imgex VERSION 0.01)
find_package(Qt COMPONENTS Gui REQUIRED)
add_executable(imgex main.cc xwin.cc image.cc transform.cc)
target_link_libraries(imgex Qt5::Gui)
target_compile_features(imgex PUBLIC cxx_std_20)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)